Display publishing organization

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -31,7 +31,7 @@
           <Item>
             <:label>Bestuur</:label>
             <:content>
-              Demo bestuur
+              {{@model.metadata.publisher.name}}
             </:content>
           </Item>
           <Item>
