--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -10,7 +10,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-      Download BPMN bestand
+      Download BPMN-bestand
     </a>
   </:action>
 </PageHeader>
@@ -31,13 +31,13 @@
           <Item>
             <:label>Bestuur</:label>
             <:content>
-              Demo bestuur
+              {{@model.metadata.publisher.name}}
             </:content>
           </Item>
           <Item>
             <:label>Beschrijving</:label>
             <:content>
-              ...
+              {{or @model.metadata.description "/"}}
             </:content>
           </Item>
 
@@ -46,13 +46,13 @@
           <Item>
             <:label>Aangemaakt op</:label>
             <:content>
-              {{date-format @model.metadata.created}}
+              {{date-format @model.metadata.created true}}
             </:content>
           </Item>
           <Item>
             <:label>Laatst aangepast op</:label>
             <:content>
-              {{date-format @model.metadata.modified}}
+              {{date-format @model.metadata.modified true}}
             </:content>
           </Item>
           <Item>
