--- a/app/templates/bpmn-files/favorites.hbs
+++ b/app/templates/bpmn-files/favorites.hbs
@@ -45,7 +45,7 @@
     <PageHeader>
       <:title>Processen</:title>
       <:subtitle><AuLink @route="help" @skin="secondary" @icon="circle-info">
-          Over BPMN bestanden
+          Over BPMN-bestanden
         </AuLink></:subtitle>
       <:action>
       </:action>
@@ -66,13 +66,21 @@
             @currentSorting={{this.sort}}
             @label="Naam"
           />
-          <AuDataTableThSortable @field="name" @label="Beschrijving" />
+          <AuDataTableThSortable
+            @field="description"
+            @currentSorting={{this.sort}}
+            @label="Beschrijving"
+          />
           <AuDataTableThSortable
             @field="modified"
             @currentSorting={{this.sort}}
             @label="Laatst aangepast op"
           />
-          <AuDataTableThSortable @field="name" @label="Bestuur" />
+          <AuDataTableThSortable
+            @field="organization"
+            @currentSorting={{this.sort}}
+            @label="Bestuur"
+          />
         </c.header>
         {{#if this.hasErrored}}
           <TableMessage::Error />
@@ -94,9 +102,9 @@
                 {{file.name}}
               </LinkTo>
             </td>
-            <td>...</td>
+            <td>{{or file.description "/"}}</td>
             <td>{{date-format file.modified}}</td>
-            <td>Demo bestuur</td>
+            <td>{{file.publisher.name}}</td>
           </c.body>
         {{/if}}
       </t.content>
