Show succes alert on file removal

--- a/app/templates/bpmn-uploads/index.hbs
+++ b/app/templates/bpmn-uploads/index.hbs
@@ -37,7 +37,7 @@
         @icon="check"
         @size="small"
         @closable="true"
-        @onClose={{this.closeAlert}}
+        @onClose={{this.closeAddedAlert}}
         class="au-u-margin au-u-margin-bottom-none"
       >
         <p>
@@ -46,7 +46,21 @@
             @model={{this.newFileId}}
             @route="bpmn-uploads.bpmn-file"
           >Raadpleeg nieuw BPMN-bestand
-          </LinkTo></p>
+          </LinkTo>
+        </p>
+      </AuAlert>
+    {{/if}}
+    {{#if this.fileDeleted}}
+      <AuAlert
+        @title="Gelukt!"
+        @skin="success"
+        @icon="check"
+        @size="small"
+        @closable="true"
+        @onClose={{this.closeDeletedAlert}}
+        class="au-u-margin au-u-margin-bottom-none"
+      >
+        <p>BPMN-bestand succesvol verwijderd</p>
       </AuAlert>
     {{/if}}
 
