Change button text

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -151,8 +151,9 @@
       <p>Laat ons weten of dit proces bruikbaar was voor jouw organisatie.</p>
     </c.content>
     <c.footer>
-      <AuButton @skin="secondary"><CustomIcon @icon="like" />Ja, dit is een goed
-        proces</AuButton>
+      <AuButton @skin="secondary">
+        <CustomIcon @icon="like" />Ja, dit proces is bruikbaar
+      </AuButton>
     </c.footer>
   </AuCard>
 </AuBodyContainer>
