--- a/app/templates/bpmn-elements/index.hbs
+++ b/app/templates/bpmn-elements/index.hbs
@@ -81,7 +81,7 @@
         {{else}}
           <c.body as |element|>
             <td>{{element.name}}</td>
-            <td>{{element.type.labelNl}}</td>
+            <td>{{capitalize-first element.type.labelNl}}</td>
             <td>
               <LinkTo
                 class="au-c-link"
