--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -124,8 +124,8 @@
               </TableMessage>
             {{else}}
               <c.body as |element|>
-                <td>{{element.name}}</td>
-                <td>{{element.type}}</td>
+                <td>{{or element.name "/"}}</td>
+                <td>{{capitalize-first (or element.type.labelNl "/")}}</td>
               </c.body>
             {{/if}}
           </t.content>
