Make sorting on type possible

--- a/app/templates/bpmn-elements/index.hbs
+++ b/app/templates/bpmn-elements/index.hbs
@@ -63,7 +63,11 @@
             @currentSorting={{this.sort}}
             @label="Naam"
           />
-          <AuDataTableThSortable @field="type" @label="Type" />
+          <AuDataTableThSortable
+            @field="type"
+            @currentSorting={{this.sort}}
+            @label="Type"
+          />
           <AuDataTableThSortable
             @field="file"
             @currentSorting={{this.sort}}
