Standardize Dutch concept labels

--- a/app/components/bpmn-element-select-by-type.hbs
+++ b/app/components/bpmn-element-select-by-type.hbs
@@ -11,6 +11,6 @@
     @triggerId={{@id}}
     as |type|
   >
-    {{capitalize-first type.labelNl}}
+    {{capitalize-first type.name}}
   </PowerSelect>
 </div>
