--- a/app/templates/bpmn-elements/index.hbs
+++ b/app/templates/bpmn-elements/index.hbs
@@ -85,7 +85,7 @@
         {{else}}
           <c.body as |element|>
             <td>{{or element.name "/"}}</td>
-            <td>{{capitalize-first (or element.type.labelNl "/")}}</td>
+            <td>{{capitalize-first (or element.type.name "/")}}</td>
             <td>
               <LinkTo
                 class="au-c-link"
