--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -129,7 +129,7 @@
             {{else}}
               <c.body as |element|>
                 <td>{{or element.name "/"}}</td>
-                <td>{{capitalize-first (or element.type.labelNl "/")}}</td>
+                <td>{{capitalize-first (or element.type.name "/")}}</td>
               </c.body>
             {{/if}}
           </t.content>
