--- a/app/templates/bpmn-uploads/bpmn-file/index.hbs
+++ b/app/templates/bpmn-uploads/bpmn-file/index.hbs
@@ -210,7 +210,7 @@
       <div class="au-c-boxed-table">
         <AuDataTable
           @content={{this.bpmnElements}}
-          @isLoading={{this.isLoading}}
+          @isLoading={{this.bpmnElementsBatchIsLoading}}
           @page={{this.page}}
           @size={{this.size}}
           as |t|
@@ -228,9 +228,9 @@
                 @label="Type"
               />
             </c.header>
-            {{#if this.hasErrored}}
+            {{#if this.bpmnElementsBatchHasErrored}}
               <TableMessage::Error />
-            {{else if this.hasNoResults}}
+            {{else if this.bpmnElementsBatchHasNoResults}}
               <TableMessage>
                 <p>
                   Er werden geen zoekresultaten gevonden.
