--- a/app/components/data-card.hbs
+++ b/app/components/data-card.hbs
@@ -2,17 +2,32 @@
   {{#if (has-block "header")}}
     <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
       <div class="au-u-flex au-u-flex--between au-u-flex--vertical-center">
-        {{#if (has-block "title")}}
-          <AuHeading @level={{or @headingLevel "3"}} @skin={{or @headingSkin "4"}} class="au-u-margin-bottom-tiny">
-            {{yield to="title"}}
-          </AuHeading>
-        {{/if}}
+        <div class="au-u-flex au-u-flex--spaced-tiny">
+          <AuIcon
+            @icon="chevron-down"
+            @size="large"
+            class="au-u-margin-top-tiny"
+          />
+          {{#if (has-block "title")}}
+            <AuHeading
+              @level={{or @headingLevel "3"}}
+              @skin={{or @headingSkin "4"}}
+              class="au-u-margin-bottom-tiny"
+            >
+              {{yield to="title"}}
+            </AuHeading>
+          {{/if}}
+        </div>
         {{yield to="header"}}
       </div>
     </div>
   {{else}}
     {{#if (has-block "title")}}
-      <AuHeading @level={{or @headingLevel "3"}} @skin={{or @headingSkin "5"}} class="au-u-margin-bottom-tiny">
+      <AuHeading
+        @level={{or @headingLevel "3"}}
+        @skin={{or @headingSkin "5"}}
+        class="au-u-margin-bottom-tiny"
+      >
         {{yield to="title"}}
       </AuHeading>
     {{/if}}
@@ -22,16 +37,20 @@
     <div class="au-c-card__content">
       {{yield
         (hash
-          Grid=(component "card-grid" itemComponent=(component "data-card/item" isGrid=true))
-          Columns=(component "card-columns" itemComponent=(component "data-card/item"))
+          Grid=(component
+            "card-grid" itemComponent=(component "data-card/item" isGrid=true)
+          )
+          Columns=(component
+            "card-columns" itemComponent=(component "data-card/item")
+          )
         )
         to="card"
       }}
     </div>
   </dl>
   {{#if (has-block "action")}}
-  <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
-    {{yield to="action"}}
-  </div>
+    <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
+      {{yield to="action"}}
+    </div>
   {{/if}}
 </div>
