--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -4,6 +4,7 @@
 
 .au-c-card--data .au-u-flex--between button.au-u-flex--spaced-tiny {
   border: none;
+  cursor: pointer;
 }
 
 .au-c-boxed-table {
