Remove bpmn-uploads.bpmn-file route

--- a/app/templates/bpmn-uploads/index.hbs
+++ b/app/templates/bpmn-uploads/index.hbs
@@ -86,7 +86,7 @@
               <LinkTo
                 class="au-c-link"
                 @model={{file.id}}
-                @route="bpmn-uploads.bpmn-file"
+                @route="bpmn-files.bpmn-file"
               >
                 {{file.name}}
               </LinkTo>
