--- a/app/components/data-card.hbs
+++ b/app/components/data-card.hbs
@@ -2,36 +2,63 @@
   {{#if (has-block "header")}}
     <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
       <div class="au-u-flex au-u-flex--between au-u-flex--vertical-center">
-        {{#if (has-block "title")}}
-          <AuHeading @level={{or @headingLevel "3"}} @skin={{or @headingSkin "4"}} class="au-u-margin-bottom-tiny">
-            {{yield to="title"}}
-          </AuHeading>
-        {{/if}}
-        {{yield to="header"}}
+        <button
+          type="button"
+          class="au-u-flex au-u-flex--spaced-tiny"
+          {{on "click" this.toggleCollapse}}
+        >
+          <AuIcon
+            @icon={{if this.isCollapsed "chevron-up" "chevron-down"}}
+            @size="large"
+            class="au-u-margin-top-tiny"
+          />
+          {{#if (has-block "title")}}
+            <AuHeading
+              @level={{or @headingLevel "3"}}
+              @skin={{or @headingSkin "4"}}
+              class="au-u-margin-bottom-tiny"
+            >
+              {{yield to="title"}}
+            </AuHeading>
+          {{/if}}
+        </button>
+        {{#unless this.isCollapsed}}
+          {{yield to="header"}}
+        {{/unless}}
       </div>
     </div>
   {{else}}
     {{#if (has-block "title")}}
-      <AuHeading @level={{or @headingLevel "3"}} @skin={{or @headingSkin "5"}} class="au-u-margin-bottom-tiny">
+      <AuHeading
+        @level={{or @headingLevel "3"}}
+        @skin={{or @headingSkin "5"}}
+        class="au-u-margin-bottom-tiny"
+      >
         {{yield to="title"}}
       </AuHeading>
     {{/if}}
   {{/if}}
 
-  <dl class="au-o-box au-o-box--small au-c-card au-c-card--data">
-    <div class="au-c-card__content">
-      {{yield
-        (hash
-          Grid=(component "card-grid" itemComponent=(component "data-card/item" isGrid=true))
-          Columns=(component "card-columns" itemComponent=(component "data-card/item"))
-        )
-        to="card"
-      }}
-    </div>
-  </dl>
-  {{#if (has-block "action")}}
-  <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
-    {{yield to="action"}}
-  </div>
-  {{/if}}
+  {{#unless this.isCollapsed}}
+    <dl class="au-o-box au-o-box--small au-c-card au-c-card--data">
+      <div class="au-c-card__content">
+        {{yield
+          (hash
+            Grid=(component
+              "card-grid" itemComponent=(component "data-card/item" isGrid=true)
+            )
+            Columns=(component
+              "card-columns" itemComponent=(component "data-card/item")
+            )
+          )
+          to="card"
+        }}
+      </div>
+    </dl>
+    {{#if (has-block "action")}}
+      <div class="au-o-box au-o-box--small au-c-card au-c-card--data">
+        {{yield to="action"}}
+      </div>
+    {{/if}}
+  {{/unless}}
 </div>
