--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -104,7 +104,7 @@
           <div class="au-u-flex au-u-flex--spaced-small au-u-flex--end">
             <AuButton
               @skin="secondary"
-              {{on "click" this.cancelEdit}}
+              {{on "click" this.resetModel}}
             >Annuleer</AuButton>
             <AuButton
               @skin="primary"
